# grindrx

./: .gitignore  BUILDING.md  CHANGES.md  CONTRIBUTING.md  HANDOFF_MESSAGE.md  KEYS.md  KEYS.md.asc  README.md  README_HANDOFF.md  ROADMAP.md  bunfig.toml  eslint.config.js  flake.nix  package.json  pantry-cabinet-build-plan.md  vite.config.mjs
contrib/: keystore.properties.example
contrib/logo/: icon.icns
docs/: api-discoveries.md
docs/content/grindr-api/messaging/: conversations.md
docs/templates/: PROJECT_GUARDRAILS_TEMPLATE.md
memory/: FIX_NOTES_media_features.md  FIX_NOTES_v0.1.9.md  MEMORY.md  PROJECT_ROADMAP.md  SESSION_STATE.md  rules.md
scripts/: gen-icons.sh  no-bun-test.ts
src/: app.d.ts  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs  storage.rs
src-tauri/src/api/: auth.rs  client.rs  headers.rs  rest.rs  ws.rs
src/lib/: app-state.svelte.ts  base64.ts  utils.ts  ws.svelte.ts
src/lib/api/: album.ts  block.ts  conversation.ts  genders.ts  grid.ts  index.test.ts  index.ts  messages.ts  profile.ts  pronouns.ts  taps.ts
src/lib/api/request-blocked/: RequestBlockedAlert.svelte
src/lib/app-data/: preferences.svelte.ts
src/lib/components/: AuthedImage.svelte  ContextMenu.svelte  NavBar.svelte  ProgressiveBlur.svelte  ToastUnimplemented.svelte  UpdateBanner.svelte
src/lib/components/filters/: GendersFilter.svelte  HeightFilter.svelte  WeightFilter.svelte  filters.test.ts
src/lib/components/location-chooser/: GeoMapPicker.svelte  LocationChooser.svelte
src/lib/model/: album.test.ts  album.ts  conversation.test.ts  conversation.ts  message.test.ts  message.ts  profile.test.ts  profile.ts  pronouns.ts  right-now.test.ts  types.ts
src/lib/model/grid/: cascade.ts
src/lib/stores/: explore-location.svelte.ts  grid-order.svelte.ts
src/lib/utils/: authed-image.ts  measurements.ts
src/routes/: +error.svelte  +layout.svelte
src/routes/(protected)/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(protected)/(navbar)/: +layout.svelte
src/routes/(protected)/(root)/: +page.svelte  Grid.svelte  GridFilters.svelte  LocationChange.svelte  ProfileMiniCard.svelte  TopBar.svelte  grid.ts
src/routes/(protected)/chat/: +layout.svelte  Conversation.svelte  (+3 more)
src/routes/auth/: +layout.svelte  +layout.ts
(+84 files in other folders)
