[package]
name = "open-grind"
version = "0.1.8"
description = "FLOSS Grindr client"
authors = ["GrindrX (https://git.dominusaxis.com/dominus/open-grind)"]
homepage = "https://git.dominusaxis.com/dominus/open-grind"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_grind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
keychain = ["dep:apple-native-keyring-store"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots", "connect"], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink", "alloc"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "10.3.0"
rand = "0.10.1"
chrono = "0.4.44"
tauri-plugin-fs = "2"
tauri-plugin-geolocation = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
rmp-serde = "1.3.1"
serde_bytes = "0.11"
base64 = "0.22"
keyring-core = "0.7.2"
tauri-plugin-notification = "2"

[target.'cfg(debug_assertions)'.dependencies]
tauri-plugin-devtools = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.3", features = ["keychain", "protected"], optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2.3", features = ["keychain", "protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "0.2.1"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5.0"

